Add and configure PostgreSQL database to the project instead of in-memory storage

--- a/Forum/src/main/resources/application.properties
+++ b/Forum/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Forum
+
+# PostgreSQL
+#connect postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/forum
+spring.datasource.username=postgres
+spring.datasource.password=rootroot
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# SQL init
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
